# hri_

./: .gitignore  README.md  cv.py  llm.py  main.py  pyproject.toml
GUI/: README.md  package.xml  setup.py
GUI/web/: app.js  styles.css
GUI/wshri_gui/: gui_server.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/wshri_gui/lib/wshri_gui/: gui_server
install/wshri_gui/share/wshri_gui/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wshri_gui/share/wshri_gui/web/: app.js  index.html  styles.css
log/: latest_build
ros2_ws/src/wshri_gui/: README.md  setup.cfg  setup.py
ros2_ws/src/wshri_gui/web/: app.js  index.html  styles.css
ros2_ws/src/wshri_gui/wshri_gui/: cv.py  gui_server.py  llm.py
